# labelle-scripting

./: .gitignore  README.md  RFC-BULK-COMPONENT-ACCESS.md  build.zig  build.zig.zon  plugin.hook.zig  plugin.labelle
.github/workflows/: ci.yml
contract/: labelle.d.ts
examples/crystal-game/: project.labelle
examples/crystal-game/components/: boid.cr  boid_vel.cr  hunger.cr  hunger.zig  worker.cr  worker.zig
examples/crystal-game/crystal/: game.cr  hunger.cr  spawner.cr
examples/crystal-game/events/: hunger__feed.cr  hunger__feed.zig
examples/crystal-game/hooks/: feed_watcher.zig
examples/crystal-game/scenes/: main.jsonc
examples/crystal-game/scripts/: game.cr  hunger.cr  spawner.cr  swarm.cr
examples/csharp-game/: .gitignore  project.labelle
examples/csharp-game/components/: Boid.cs  BoidVel.cs  Hunger.cs  Worker.cs  hunger.zig  worker.zig
examples/csharp-game/events/: hunger__feed.cs  hunger__feed.zig
examples/csharp-game/hooks/: feed_watcher.zig
examples/csharp-game/scenes/: main.jsonc
examples/csharp-game/scripts/: FeedWatcher.cs  Game.cs  HungerSystem.cs  Json.cs  Spawner.cs  Swarm.cs
examples/go-game/: project.labelle
examples/go-game/components/: hunger.zig  worker.zig
examples/go-game/events/: hunger__feed.zig
examples/go-game/hooks/: feed_watcher.zig
examples/go-game/scenes/: main.jsonc
examples/go-game/scripts/: game.go  hunger.go  spawner.go
examples/lua-game/: project.labelle
examples/lua-game/components/: dot.lua
examples/lua-game/scenes/: main.jsonc
examples/lua-game/scripts/: 10_swarm.lua
examples/ruby-game/: .gitignore  project.labelle
examples/ruby-game/components/: hunger.rb  hunger.zig  worker.rb  worker.zig
examples/ruby-game/events/: hunger__feed.rb  hunger__feed.zig
examples/ruby-game/hooks/: feed_watcher.zig
examples/ruby-game/ruby/: 10_ball.rb  20_hunger.rb  hunger_controller.rb  spawner.rb
examples/ruby-game/scenes/: main.jsonc
examples/ruby-game/scripts/: 10_spawner.rb  20_hunger_controller.rb  feed_watcher.rb
examples/rust-game/: .gitignore  project.labelle
examples/rust-game/components/: boid.rs  boid_vel.rs  hunger.rs  hunger.zig  worker.rs  worker.zig
examples/rust-game/events/: hunger__feed.rs  hunger__feed.zig
examples/rust-game/hooks/: feed_watcher.zig
examples/rust-game/rust/: hunger.rs  mod.rs  spawner.rs
examples/rust-game/scenes/: main.jsonc
examples/rust-game/scripts/: hunger.rs  mod.rs  spawner.rs  swarm.rs
examples/ts-game/: project.labelle
examples/ts-game/components/: dot.ts  hunger.ts  hunger.zig  worker.ts  worker.zig
examples/ts-game/events/: hunger__feed.ts  hunger__feed.zig
examples/ts-game/hooks/: feed_watcher.zig
examples/ts-game/scenes/: main.jsonc
examples/ts-game/scripts/: 10_spawner.ts  20_hunger_controller.ts  30_swarm.ts  feed_watcher.ts
native/: Cargo.toml
native-crystal/: exported_symbols_linux.txt  exported_symbols_macos.txt
native-crystal/src/: glue.cr  labelle.cr  main.cr
native-crystal/src/game/: game.cr
native-csharp/: .gitignore  LabelleScripts.csproj
native-csharp/src/: Declare.cs  Glue.cs  Labelle.cs
native-csharp/src/game/: Game.cs
native-go/: batch.go  glue.go  go.mod  labelle.go
native-go/game/: game.go
native-go/glue/: main.go
native/src/: glue.rs  labelle.rs  lib.rs
native/src/game/: mod.rs
packs/scripting_console/: pack.labelle
packs/scripting_console/hooks/: console_eval.zig
src/: bulk_shims.zig  contract.zig  engine_stub.zig  eval.zig  id_batch.zig  plugin_params_default.zig  root.zig  sandbox.zig  watch.zig
src/crystal/: bindings.zig  vm.zig
src/csharp/: bindings.zig  vm.zig
src/go/: bindings.zig  vm.zig
src/lua/: bindings.zig  prelude.lua  vm.zig
src/ruby/: bindings.zig  prelude.rb  shim.c  vm.zig
src/rust/: bindings.zig  vm.zig
src/ts/: abi_check.c  bindings.zig  json.zig  prelude.js  vm.zig
tests/: crystal_boot_suite.zig  crystal_suite.zig  csharp_suite.zig  declare_cross_golden.zig  declare_crystal_tool.zig  declare_csharp_tool.zig  declare_ruby_tool.zig  declare_rust_tool.zig  declare_tool.zig  declare_ts_tool.zig  devx_suite.zig  eval_shared_suite.zig  go_suite.zig  id_batch_suite.zig  lua_sandbox_suite.zig  lua_suite.zig  mock_world.zig  root.zig  ruby_suite.zig  rust_suite.zig  sandbox_root.zig  ts_suite.zig
tests/crystal/: main.cr
tests/crystal/game/: behavior.cr  big_id.cr  big_query.cr  bulk.cr  counter.cr  events.cr  game.cr  gc_churn.cr  lifecycle.cr  (+2 more)
tests/csharp/: .gitignore  LabelleScriptsTest.csproj
tests/go/: go.mod  main.go
tests/lua/: array_marker.lua  behavior.lua  big_id_check.lua  big_query_check.lua  component_ref.lua  counter.lua  event_declared.lua  event_payload.lua  frame_array.lua  get_into.lua  hot_loop.lua  json_roundtrip.lua  lifecycle.lua  payload_id_check.lua  query_check.lua  u64str_check.lua
tests/ruby/: arena_probe.rb  behavior.rb  big_id_check.rb  big_query_check.rb  component_dsl.rb  controller_alpha.rb  controller_beta.rb  counter.rb  event_declared.rb  event_payload.rb  frame_array.rb  hunger_controller.rb  iso_a.rb  iso_b.rb  json_roundtrip.rb  lifecycle.rb  payload_id_check.rb  query_check.rb  u64str_check.rb  zero_alloc.rb
tests/rust/: Cargo.toml
tests/rust/game/: alloc_probe.rs  behavior.rs  big_id.rs  big_query.rs  bulk.rs  counter.rs  events.rs  lifecycle.rs  mod.rs  panics.rs  util.rs
tests/rust/src/: lib.rs
tests/ts/: behavior.js  big_id_check.js  big_query_check.js  component_ref.js  counter.js  event_payload.js  frame_array.js  iso_a.js  iso_b.js  json_roundtrip.js  lifecycle.js  payload_id_check.js  query_check.js  steady_alloc.js  u64str_check.js
tools/: crystal_lib_paths.zig
tools/declare/: declare_prelude.lua  extract.zig  main.zig
tools/declare-crystal/: extract.zig  main.zig
tools/declare-csharp/: extract.zig  main.zig
tools/declare-rs/: Cargo.toml  extract.zig  main.zig
tools/declare-rs/src/: decls.rs  main.rs
tools/declare-rs/testdata/: components.rs  events.rs
tools/declare-ruby/: declare_prelude.rb  extract.zig  main.zig
tools/declare-ts/: declare_prelude.js  extract.zig  main.zig
(+16 files in other folders)
