# The probe-crate manifest TEMPLATE for labelle-declare-rs (the rust declare
# tool; labelle-engine#774, RFC-LANGUAGE-PLUGINS rev 17 §7).
#
# Rust has no interpreter, so — unlike the lua/ruby declare tools, which RUN a
# script string in-process against a stub — the rust tool is a probe it
# CARGO-BUILDS at generate: labelle-declare-rs STAGES a crate under the
# assembler-supplied cache dir (this manifest, the SHIPPED `labelle` module,
# a generated `main.rs`, and one `decl_NNNN.rs` per declaration file), builds
# it with `--features declare`, and RUNS it — the shipped
# `labelle::component!`/`event!` macros register schemas under the `declare`
# feature and the generated main prints the accumulated JSON on stdout.
#
# This file is EMBEDDED into the tool exe (build.zig anonymous import) and
# written verbatim into the staged crate, so the tool always builds the game's
# declarations against the exact manifest it was compiled with. No default
# feature: the tool passes `--features declare` explicitly (the probe's
# emit_schema needs `inventory`, which the macros submit into under that
# feature). No committed lockfile — the crate is staged fresh each run and its
# sole dep (inventory) rides the host's cargo registry cache.
[package]
name = "labelle_declare_probe"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "labelle-declare-probe"
path = "src/main.rs"

[features]
declare = ["dep:inventory"]

[dependencies]
inventory = { version = "0.3", optional = true }
